[package]
name = "conway"
version = "0.1.0"
authors = ["Manoel Vilela <manoel_vilela@engineer.com>"]
description = "A implementation of the Conway's game of life written in Rust"
documentation = "https://docs.rs/conway-rs"
repository = "https://github.com/ryukinix/conway-rs"
keywords = ["rust", "conway"]
license = "MIT"


[dependencies]
rand = "0.3"

[[bin]]
name = "main"
doc = false
