[package]
name = "conway-rs"
version = "0.1.1"
authors = ["Manoel Vilela <manoel_vilela@engineer.com>"]
description = "An implementation of the Conway's game of life written in Rust"
documentation = "https://docs.rs/conway-rs"
repository = "https://github.com/ryukinix/conway-rs"
keywords = ["rust", "conway"]
license = "MIT"


[dependencies]
rand = "0.3"

[[bin]]
name = "main"
doc = false
